Mon Sep 20 15:17:47 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper/lib/ripper/tokenizer.rb: new file.

Mon Sep 20 15:13:52 2004  Minero Aoki  <aamine@loveruby.net>

	* test/ripper/test_scanner_events.rb: test #lineno and #column.

Mon Sep 20 14:50:17 2004  Minero Aoki  <aamine@loveruby.net>

	* parse.y [ripper]: delayed heredocument events should be
	  dispatched after EOF.

Mon Sep 20 14:39:42 2004  Minero Aoki  <aamine@loveruby.net>

	* parse.y [ripper]: adjust lineno and columns for multi-line
	  strings.

	* parse.y [ripper]: delay heredocument events until seeing
	  end-of-line.

	* parse.y [ripper]: event on__heredoc_contentn ->
	  on__tstring_content.

	* ext/ripper/eventids2.c: ditto.

	* ext/ripper/lib/ripper.rb: sync with eventids2.c.

	* test/ripper/test_scanner_events.rb: test it.

	* ext/ripper/tools/generate-ripper_rb.rb: show basename of input.

	* ext/ripper/Makefile.dev: support objdir build.

Mon Sep 20 13:22:55 2004  Minero Aoki  <aamine@loveruby.net>

	* parse.y [ripper]: remove Ripper#pos.

	* parse.y [ripper]: Ripper#column should return the column of the
	  current token.

Mon Sep 20 12:02:41 2004  Minero Aoki  <aamine@loveruby.net>

	* parse.y [ripper]: unify old_lex_p and token_head.

	* test/ripper/test_scanner_events.rb: now \r\n is saved correctly.

	* parse.y: new macro lex_goto_eol() for next change.

Mon Sep 20 11:01:55 2004  Minero Aoki  <aamine@loveruby.net>

	* parse.y [ripper]: adjust line number for heredoc.  [ruby-dev:24272]

Mon Sep 20 04:49:22 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/ripper/ripper.rb.in: new const Ripper::PARSER_EVENT_TABLE.

	* ext/ripper/ripper.rb.in: new const Ripper::SCANNER_EVENT_TABLE.

	* ext/ripper/lib/ripper.rb: sync with ripper.rb.in.

Mon Sep 20 04:13:00 2004  Minero Aoki  <aamine@loveruby.net>

	* test/ripper/test_scanner_events.rb: test spaces before heredoc
	  mark.

Mon Sep 20 03:46:54 2004  Minero Aoki  <aamine@loveruby.net>
