@@ -1,3 +1,9 @@
+Mon Sep 20 16:58:16 2004  Minero Aoki  <aamine@loveruby.net>
+
+	* parse.y [ripper]: do not delay dispatching.
+
+	* ext/ripper/lib/ripper/tokenizer.rb: sort tokens by right order.
+
 Mon Sep 20 15:17:47 2004  Minero Aoki  <aamine@loveruby.net>
 
 	* ext/ripper/lib/ripper/tokenizer.rb: new file.
